# diamond-grammar

./: CMakeLists.txt  Cargo.toml  Makefile  grammar.js  package.json  tree-sitter.json
bindings/c/: tree-sitter-diamond.pc.in
bindings/c/tree_sitter/: tree-sitter-diamond.h
bindings/rust/: build.rs  lib.rs
fdetect/: diamond.lua
plugin/: init.lua
queries/diamond/: folds.scm  highlights.scm  indents.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
